--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -31,7 +31,7 @@ jobs:
       COMPILER: GCC
       TOOL_CHAINS: GCC
       TASK: gen-only
-      COMPONENT: all
+      COMPONENTS: all
       ADAPTER_SN: 440133193
       CHIP: EFR32MG24BXXXF1536
     steps:
@@ -141,12 +141,12 @@ jobs:
         slc signature trust -extpath $SDK_PATH/extension/IEC60730_Libs
         cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=${BOARD_NAME}
         cmake --build . --target integration_test_info -j4
-        export  ADAPTER_SN=440133193
+        export ADAPTER_SN=440133193
         export LST_PATH=$PWD/test/integration_test/build/brd4187c/integration_test_iec60730_watchdog/S
         export HOST_IP=192.168.1.69
         cd ../test/
         ls -la
-        bash execute_integration_test.sh ${BOARD_NAME} $TASK $COMPONENTS $ADAPTER_SN $COMPILER
+        bash execute_integration_test.sh $BOARD_NAME $TASK $COMPONENTS $ADAPTER_SN $COMPILER
     - name: Upload firmware
       uses: actions/upload-artifact@v4.3.4
       with:
@@ -168,7 +168,7 @@ jobs:
       TOOL_CHAINS: GCC
       PLATFORM: MG12
       TASK: gen-only
-      COMPONENT: all
+      COMPONENTS: all
       ADAPTER_SN: 440189400
       CHIP: EFR32MG12
     steps:
@@ -284,7 +284,7 @@ jobs:
         git branch
         cd ../test/
         ls -la
-        bash execute_integration_test.sh ${BOARD_NAME} $TASK $COMPONENTS $ADAPTER_SN $COMPILER
+        bash execute_integration_test.sh $BOARD_NAME $TASK $COMPONENTS $ADAPTER_SN $COMPILER
     - name: Upload firmware
       uses: actions/upload-artifact@v4.3.4
       with:
