--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -140,9 +140,8 @@ jobs:
         cd build
         slc signature trust -extpath $SDK_PATH/extension/IEC60730_Libs
         cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=${BOARD_NAME}
-        cmake --build . --target integration_test_info -j4
-        export ADAPTER_SN=440133193
-        export LST_PATH=$PWD/test/integration_test/build/brd4187c/integration_test_iec60730_watchdog/S
+        make integration_test_info -j4
+        export LST_PATH=$PWD/test/integration_test/build/${BOARD_NAME}/integration_test_iec60730_watchdog/S
         export HOST_IP=192.168.1.69
         cd ../test/
         ls -la
@@ -277,14 +276,13 @@ jobs:
         cd build
         slc signature trust -extpath $SDK_PATH/extension/IEC60730_Libs
         cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=${BOARD_NAME}
-        cmake --build . --target integration_test_info -j4
-        export  ADAPTER_SN=440133193
-        export LST_PATH=$PWD/test/integration_test/build/brd4187c/integration_test_iec60730_watchdog/S
+        make integration_test_info -j4
+        export LST_PATH=$PWD/test/integration_test/build/${BOARD_NAME}/integration_test_iec60730_watchdog/S
         ls -la
         git branch
         cd ../test/
         ls -la
-        bash execute_integration_test.sh $BOARD_NAME $TASK $COMPONENTS $ADAPTER_SN $COMPILER
+        bash execute_integration_test.sh ${BOARD_NAME} $TASK $COMPONENTS $ADAPTER_SN $COMPILER
     - name: Upload firmware
       uses: actions/upload-artifact@v4.3.4
       with:
