--- a/.github/workflows/generate_firmware.yaml
+++ b/.github/workflows/generate_firmware.yaml
@@ -17,6 +17,7 @@ env:
   JLINK_SEGGER_URL: https://www.segger.com/downloads/jlink/JLink_Linux_x86_64.tgz
   TASK: gen-only
   JLINK_PATH: /opt/SEGGER/JLink/libjlinkarm.so
+  REPO_BRANCH: ${{ github.head_ref || github.ref_name }}
 jobs:
   job1:
     name: Generate Firmware for MG24 with GCC
@@ -58,7 +59,7 @@ jobs:
         cd extension
         git clone https://github.com/SiliconLabs/IEC60730_Libs.git
         cd IEC60730_Libs
-        git checkout create-unit-test-functions-in-lib-iec60730
+        git checkout $REPO_BRANCH
         ls -la
         cd ..
         ls -la
@@ -194,7 +195,7 @@ jobs:
         cd extension
         git clone https://github.com/SiliconLabs/IEC60730_Libs.git
         cd IEC60730_Libs
-        git checkout create-unit-test-functions-in-lib-iec60730
+        git checkout $REPO_BRANCH
         ls -la
         cd ..
         ls -la
