--- a/.github/workflows/04-Integration_Test.yaml
+++ b/.github/workflows/04-Integration_Test.yaml
@@ -14,7 +14,7 @@ env:
   REPO_BRANCH: ${{ github.event.inputs.branch }}
   REPO_NAME: ${{ github.repository }}
   JLINK_PATH: /opt/SEGGER/JLink/libjlinkarm.so
-  SDK_PATH: ~/SimplicityStudio/SDKs/gecko_sdk
+  SDK_PATH: $HOME/SimplicityStudio/SDKs/gecko_sdk
 jobs:
   job1:
     name: Integration test for mg24 with gcc
@@ -31,7 +31,7 @@ jobs:
       COMPONENTS: all
       ADAPTER_SN: 440111030 
       CHIP: EFR32MG24BXXXF1536
-      TOOL_DIRS: ~/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin
+      TOOL_DIRS: $HOME/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin
       START_ADDR_FLASH: 0x8000000
 
     steps:
@@ -51,10 +51,10 @@ jobs:
         ls -la
     - name: Run test
       run: |
-        export PATH=$PATH:~/SimplicityStudio-5/SimplicityStudio_v5/developer/adapter_packs/commander
-        export PATH=$PATH:~/slc_cli
+        export PATH=$PATH:$HOME/SimplicityStudio-5/SimplicityStudio_v5/developer/adapter_packs/commander
+        export PATH=$PATH:$HOME/slc_cli
         export PATH=$PATH:/usr/bin/
-        export PATH=$PATH:~/amazon-corretto-17.0.12.7.1-linux-x64/bin
+        export PATH=$PATH:$HOME/amazon-corretto-17.0.12.7.1-linux-x64/bin
         export LST_PATH=$PWD/build/test/integration_test/build/$BOARD_NAME/integration_test_iec60730_watchdog/S
         slc configuration --sdk=${SDK_PATH}
         ninja --version
@@ -100,7 +100,7 @@ jobs:
       COMPONENTS: all
       ADAPTER_SN: 440189400 
       CHIP: EFR32MG12
-      TOOL_DIRS: ~/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin
+      TOOL_DIRS: $HOME/SimplicityStudio-5/SimplicityStudio_v5/developer/toolchains/gnu_arm/12.2.rel1_2023.7/bin
       START_ADDR_FLASH: 0x0000000
 
     steps:
@@ -120,10 +120,10 @@ jobs:
         ls -la
     - name: Prepare environment
       run: |
-        export PATH=$PATH:~/SimplicityStudio-5/SimplicityStudio_v5/developer/adapter_packs/commander
-        export PATH=$PATH:~/slc_cli
+        export PATH=$PATH:$HOME/SimplicityStudio-5/SimplicityStudio_v5/developer/adapter_packs/commander
+        export PATH=$PATH:$HOME/slc_cli
         export PATH=$PATH:/usr/bin/
-        export PATH=$PATH:~/amazon-corretto-17.0.12.7.1-linux-x64/bin
+        export PATH=$PATH:$HOME/amazon-corretto-17.0.12.7.1-linux-x64/bin
         export LST_PATH=$PWD/build/test/integration_test/build/$BOARD_NAME/integration_test_iec60730_watchdog/S
         slc configuration --sdk=${SDK_PATH}
         ninja --version
