--- a/.github/workflows/00-Check_Coding_Convention.yaml
+++ b/.github/workflows/00-Check_Coding_Convention.yaml
@@ -24,10 +24,26 @@ jobs:
     steps:
     - name: Trigger
       run: echo "Triggered by ${{github.event_name}} event"
+      
+    - name: Check Branch Input
+      run: |
+        if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+          if [ -z "${{ github.event.inputs.branch }}" ]; then
+            echo "Branch input is required for manual trigger."
+            exit 1
+          else
+            echo "Checkout branch ${{ github.event.inputs.branch }}"
+          fi
+        else
+          # Extract branch name from github.ref
+          BRANCH_NAME="${{ github.ref }}" 
+          BRANCH_NAME="${BRANCH_NAME##*/}"  # This removes everything before the last '/'
+          echo "Checkout branch $BRANCH_NAME"
+        fi
+        
     - name: Checkout
-      uses: actions/checkout@v4.1.7
-      with:
-        ref: "${{ github.event.inputs.branch }}"
+      uses: actions/checkout@v4.1.7    
+      
     - name: Install python3.11
       if: always()
       run: |
