--- a/.github/workflows/01-Generate_Firmware.yaml
+++ b/.github/workflows/01-Generate_Firmware.yaml
@@ -44,8 +44,28 @@ jobs:
       ADAPTER_SN: 440133193
       CHIP: EFR32MG24BXXXF1536
     steps:
+    - name: Trigger
+      run: echo "Triggered by ${{github.event_name}} event"
+      
+    - name: Check Branch Input
+      run: |
+        if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+          if [ -z "${{ github.event.inputs.branch }}" ]; then
+            echo "Branch input is required for manual trigger."
+            exit 1
+          else
+            echo "Checkout branch ${{ github.event.inputs.branch }}"
+          fi
+        else
+          # Extract branch name from github.ref
+          BRANCH_NAME="${{ github.ref }}" 
+          BRANCH_NAME="${BRANCH_NAME##*/}"  # This removes everything before the last '/'
+          echo "Checkout branch $BRANCH_NAME"
+        fi
+        
     - name: Checkout
-      uses: actions/checkout@v4.1.7
+      uses: actions/checkout@v4.1.7     
+        
     - name: Install Simplicity SDK
       if: always()
       run: |
@@ -179,8 +199,28 @@ jobs:
       ADAPTER_SN: 440189400
       CHIP: EFR32MG12
     steps:
+    - name: Trigger
+      run: echo "Triggered by ${{github.event_name}} event"
+      
+    - name: Check Branch Input
+      run: |
+        if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+          if [ -z "${{ github.event.inputs.branch }}" ]; then
+            echo "Branch input is required for manual trigger."
+            exit 1
+          else
+            echo "Checkout branch ${{ github.event.inputs.branch }}"
+          fi
+        else
+          # Extract branch name from github.ref
+          BRANCH_NAME="${{ github.ref }}" 
+          BRANCH_NAME="${BRANCH_NAME##*/}"  # This removes everything before the last '/'
+          echo "Checkout branch $BRANCH_NAME"
+        fi
+        
     - name: Checkout
-      uses: actions/checkout@v4.1.7
+      uses: actions/checkout@v4.1.7    
+      
     - name: Install Simplicity SDK
       if: always()
       run: |
