--- a/.github/workflows/01-Generate_Firmware_Debug.yaml
+++ b/.github/workflows/01-Generate_Firmware_Debug.yaml
@@ -72,7 +72,10 @@ jobs:
       uses: actions/checkout@v4.1.7
       with:
         ref: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.branch || github.ref }}"
-        path: /home/runner/work/${{ github.event.repository.name }}
+    - name: Move to custom workspace
+      run: |
+          mv "$GITHUB_WORKSPACE/${{ github.event.repository.name }}" "$GITHUB_WORKSPACE/"
+          rm -rf "$GITHUB_WORKSPACE/${{ github.event.repository.name }}"  # Delete the empty folder
     - name: Verify directory
       run: |
           echo "Cloned to: $(pwd)"
