--- a/.github/workflows/01-Generate_Firmware_Debug.yaml
+++ b/.github/workflows/01-Generate_Firmware_Debug.yaml
@@ -79,6 +79,7 @@ jobs:
       run: |
           cd ..
           echo "Cloned to: $(pwd)"
+          tree "$(pwd)"
           ls -la /home/runner/work/${{ github.event.repository.name }}
     - name: Log Current Branch and Commit
       run: |
@@ -90,6 +91,7 @@ jobs:
         cd ..
         echo "Repo root directory: $GITHUB_WORKSPACE"
         echo "Current directory: $PWD"
+        tree "$(pwd)"
         if [ -d "simplicity_sdk" ]; then
           echo "Removing existing simplicity_sdk folder..."
           rm -rf simplicity_sdk
@@ -104,6 +106,7 @@ jobs:
       run: |
         cd ..
         echo "Current directory: $PWD"
+        tree "$(pwd)"
         if [ -d "gecko_sdk_$SDK_VER" ]; then
           echo "Removing existing gecko_sdk_$SDK_VER folder..."
           rm -rf gecko_sdk_$SDK_VER
@@ -116,6 +119,7 @@ jobs:
         mkdir extension
         cd extension
         git clone https://github.com/SiliconLabs/IEC60730_Libs.git
+        ls -la
         cd IEC60730_Libs
         git checkout create-unit-test-functions-in-lib-iec60730
         ls -la
@@ -128,6 +132,7 @@ jobs:
       run: |
         cd ..
         echo "Current directory: $PWD"
+        tree "$(pwd)"
         wget $AM_CORRETTO_17
         tar -xzf amazon-corretto-17-x64-linux-jdk.tar.gz
         ls -la
@@ -136,6 +141,7 @@ jobs:
       run: |
         cd ..
         echo "Current directory: $PWD"
+        tree "$(pwd)"
         wget $SLC_CLI_URL
         unzip slc_cli_linux.zip
         ls -la
@@ -144,6 +150,7 @@ jobs:
       run: |
         cd ..
         echo "Current directory: $PWD"
+        tree "$(pwd)"
         wget $COMMANDER_URL
         unzip SimplicityCommander-Linux.zip
         cd SimplicityCommander-Linux
@@ -158,6 +165,7 @@ jobs:
       run: |
         cd ..
         echo "Current directory: $PWD"
+        tree "$(pwd)"
         wget $GCC_URL
         tar -xf arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi.tar.xz
         ls -la
@@ -167,6 +175,7 @@ jobs:
       run: |
         cd ..
         echo "Current directory: $PWD"
+        tree "$(pwd)"
         sudo apt update
         sudo apt -y install ninja-build
         ninja --version
@@ -175,6 +184,7 @@ jobs:
       run: |
         cd ..
         echo "Current directory: $PWD"
+        tree "$(pwd)"
         sudo apt update
         sudo apt upgrade
         sudo add-apt-repository ppa:deadsnakes/ppa -y
@@ -195,6 +205,7 @@ jobs:
       run: |
         cd ..
         echo "Current directory: $PWD"
+        tree "$(pwd)"
         export PATH=$PATH:$PWD/commander
         export PATH=$PATH:$PWD/slc_cli
         export JLINK_PATH=/opt/SEGGER/JLink/libjlinkarm.so
