--- a/.github/workflows/01-Generate_Firmware_Debug.yaml
+++ b/.github/workflows/01-Generate_Firmware_Debug.yaml
@@ -45,82 +45,82 @@ jobs:
         cd simplicity_studio
         git clone $SIM_REPO
         cd simplicity_sdk
-        ls -la
+        # ls -la
         cd ..
-        ls -la
+        # ls -la
         echo "Current directory: $PWD"
         ls -la
         echo "List file in simplicity_sdk folfer"
-        ls -la "$(pwd)/simplicity_sdk"
+        ls -la "/home/runner/work/IEC60730_Libs/IEC60730_Libs/simplicity_sdk"
     - name: Install Gecko SDK
       if: always()
       run: |
         git clone $GECKO_SDK_REPO gecko_sdk_$SDK_VER
         cd gecko_sdk_$SDK_VER
         git checkout tags/$SDK_VER
-        ls -la
+        # ls -la
         mkdir extension
         cd extension
         git clone https://github.com/SiliconLabs/IEC60730_Libs.git
         cd IEC60730_Libs
         git checkout $REPO_BRANCH
-        ls -la
+        # ls -la
         cd ..
-        ls -la
+        # ls -la
         cd ..
-        ls -la
+        # ls -la
         echo "Current directory: $PWD"
         ls -la
         echo "List file in simplicity_sdk folfer"
-        ls -la "$(pwd)/simplicity_sdk"
+        ls -la "/home/runner/work/IEC60730_Libs/IEC60730_Libs/simplicity_sdk"
     - name: Install Amazon Corretto 17
       if: always()
       run: |
         wget $AM_CORRETTO_17
         tar -xzf amazon-corretto-17-x64-linux-jdk.tar.gz
-        ls -la
+        # ls -la
         echo "Current directory: $PWD"
         ls -la
         echo "List file in simplicity_sdk folfer"
-        ls -la "$(pwd)/simplicity_sdk"
+        ls -la "/home/runner/work/IEC60730_Libs/IEC60730_Libs/simplicity_sdk"
     - name: Install SLC CLI
       if: always()
       run: |
         wget $SLC_CLI_URL
         unzip slc_cli_linux.zip
-        ls -la
+        # ls -la
         echo "Current directory: $PWD"
         ls -la
         echo "List file in simplicity_sdk folfer"
-        ls -la "$(pwd)/simplicity_sdk"
+        ls -la "/home/runner/work/IEC60730_Libs/IEC60730_Libs/simplicity_sdk"
     - name: Install Simplicity Commander
       if: always()
       run: |
         wget $COMMANDER_URL
         unzip SimplicityCommander-Linux.zip
         cd SimplicityCommander-Linux
-        ls -la
+        # ls -la
         cd ..
         mkdir commander
         tar -xf SimplicityCommander-Linux/Commander_linux_x86_64_*.tar.bz commander
         cd commander
-        ls -la
+        # ls -la
         echo "Current directory: $PWD"
         ls -la
         echo "List file in simplicity_sdk folfer"
-        ls -la "$(pwd)/simplicity_sdk"
+        ls -la "/home/runner/work/IEC60730_Libs/IEC60730_Libs/simplicity_sdk"
     - name: Install GCC
       if: always()
       run: |
         wget $GCC_URL
         tar -xf arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi.tar.xz
-        ls -la
+        # ls -la
         cd arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi
-        ls -la
+        # ls -la
         echo "Current directory: $PWD"
         ls -la
         echo "List file in simplicity_sdk folfer"
-        ls -la "$(pwd)/simplicity_sdk"
+        ls -la "/home/runner/work/IEC60730_Libs/IEC60730_Libs/simplicity_sdk"
     - name: Install Ninja build
       run: |
         sudo apt update
@@ -150,7 +150,7 @@ jobs:
         echo "Current directory: $PWD"
         ls -la
         echo "List file in simplicity_sdk folfer"
-        ls -la "$(pwd)/simplicity_sdk"
+        ls -la "/home/runner/work/IEC60730_Libs/IEC60730_Libs/simplicity_sdk"
         export PATH=$PATH:$PWD/commander
         export PATH=$PATH:$PWD/slc_cli
         export TOOL_DIRS=$PWD/$TOOL_DIRS
