--- a/.github/workflows/01-Generate_Firmware_Debug.yaml
+++ b/.github/workflows/01-Generate_Firmware_Debug.yaml
@@ -224,14 +224,17 @@ jobs:
         bash execute_integration_test.sh $BOARD_NAME_MG12 $TASK $COMPONENT $ADAPTER_SN_MG12 $COMPILER
         echo "Generate MG24 image"
         cd ../build
-        echo "cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG24"
+        ls -la
+        echo "Run Cmake"
+        cmake --toolchain ../cmake/toolchain.cmake .. -DENABLE_INTEGRATION_TESTING=ON -DBOARD_NAME=$BOARD_NAME_MG24
         make integration_test_info -j4
         cd ../test/
         ls -la
         if [ -z "${{ github.event.inputs.ADAPTER_SN_MG24 }}" ]; then
             ADAPTER_SN_MG24=440133193
         fi  
-        echo "bash execute_integration_test.sh $BOARD_NAME_MG24 $TASK $COMPONENT $ADAPTER_SN_MG24 $COMPILER"
+        echo "Run bash script
+        bash execute_integration_test.sh $BOARD_NAME_MG24 $TASK $COMPONENT $ADAPTER_SN_MG24 $COMPILER
     - name: Upload firmware MG12
       uses: actions/upload-artifact@v4.3.4
       with:
